Tom Sawyer lab exercise

--- a/lecture/index.html
+++ b/lecture/index.html
@@ -135,7 +135,21 @@ class: center, middle
 
 ---
 
-# automate changes to files for hands off deployment/maintenance work
+# automate changes to files that might otherwise be done by hand
+
+
+
+---
+
+# automate changes to files, part 2
+
+Let's rename Tom Sawyer to Todd Sawyer.  Things to watch for:
+
+- Case insensitive search
+- Replace Tom with Todd, but not Tomato with Toddato
+- Replace all Toms on a line
+
+https://www.gutenberg.org/files/74/74-0.txt
 
 ---
 
