Data could not be loaded

--- a/lecture/index.html
+++ b/lecture/index.html
@@ -68,7 +68,7 @@ class: center, middle
 
 ---
 
-# sed needs a list of commands
+# First: sed needs a list of commands
 
 ## The most common sed command is substitute (s)
 
@@ -91,7 +91,7 @@ sed -e "s/first_term/first_replacement/" -e "s/second_term/second_replacement/"
 
 ---
 
-# sed needs a source of data
+# Second: sed needs a source of data
 
 ```
 
@@ -133,6 +133,8 @@ class: center, middle
 
 # make changes to huge files that traditional editors choke on
 
+![](./data_could_not_be_loaded.png)
+
 ---
 
 # automate changes to files that might otherwise be done by hand
@@ -151,8 +153,6 @@ Let's rename Tom Sawyer to Todd Sawyer.  Things to watch for:
 - Case insensitive search
 - Replace Tom with Todd, but not Tomato with Toddato
 - Replace all Toms on a line
-
-https://www.gutenberg.org/files/74/74-0.txt
 
 ---
 
